WIP a big mess but it is working...